Chore: Refactor Code, Remove unnecessary imports